TEMP: all Makefiles: -DDEBUG

--- a/buffers/Makefile
+++ b/buffers/Makefile
@@ -1,6 +1,7 @@
 LINUX ?= /lib/modules/$(shell uname -r)/build
 
 EXTRA_CFLAGS += -I$(obj)/../include/
+EXTRA_CFLAGS += -DDEBUG
 
 # zio-buf-kmalloc.o is now part of zio-core
 obj-m = zio-buf-vmalloc.o
