--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -2,6 +2,8 @@ LINUX ?= /lib/modules/$(shell uname -r)/build
 
 EXTRA_CFLAGS += -I$(obj)/../include
 
+EXTRA_CFLAGS += -DDEBUG
+
 obj-m = zio-zero.o
 obj-m += zio-gpio.o
 ifdef CONFIG_SPI
