added data-to-uart, to spit data to uart (FIXME: move?)
Signed-off-by: Alessandro Rubini <rubini@gnudd.com>

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -7,6 +7,7 @@ HOSTCC ?= gcc
 
 hostprogs-y := zio-dump
 hostprogs-y += zio-cat-file
+hostprogs-y := zio-dump data-to-uart
 
 # The following is ugly, please forgive me by now
 user: $(hostprogs-y)
