TEMP triggers/Makefile: comment irq trigger for incompatibility

--- a/triggers/Makefile
+++ b/triggers/Makefile
@@ -4,4 +4,4 @@ EXTRA_CFLAGS += -I$(obj)/../include/
 
 # zio-trig-user.o is now part of zio-core
 obj-m = zio-trig-timer.o
-obj-m += zio-trig-irq.o
+#obj-m += zio-trig-irq.o
