pfzio: complete implementation, but still with some bugs
This commit is the result of squashing several commits.
The last squash after a rebase to a newer ZIO master (version 1.0
of the control) comes from the following (branch pfzio-121102, in
our backups):

   6441045 include: rename pf-zio.h to zio-sock.h
   3523fd4 pf-zio: moved header to include/linux/ and fixed other details
   2542956 pf-zio.h: define sockaddr_zio for users
   c8eac35 buffer-sock: define a missing spinlock and init it
   49e47d8 pfzio: complete implementation, but still with some bugs

The first of them was the result of squashing of several commits. There are
some bugs, even serious, to be addressed, and we'd better not have a
non-working code base in master when we merge.  So this is a complete
squash of these commits (branch "pfzio-beta2", still in our backups):

  e0f5f6b buffers: split pf-zio buffer in three parts (still dirty)
  e1d4341 pfzio: fix block allocation inside skbuf in zn_alloc_block()
  8e515a1 pfzio: added ethernet header.
  de957ec pfzio: __zn_get_skb_block: sk_buff pointer isn't needed anymore
  8a7a2e6 pfzio: trivial fix in zn_poll - check comes before everything now
  52daea9 pfzio: added stats update in zn_hard_start_xmit() in case of error
  f263ee4 pfzio: added compile-time padding calculation for struct zio_cb
  e1d3003 pfzio: bind() can now be used on stream sockets.
  945477e pfzio: added a simple client to send data using PF_ZIO
  5743b41 pfzio: Fixed a bug in zn_getname().
  ac86d9d pfzio: A couple style fixes
  f6d970d pfzio: Some style fixes to code
  d2cc052 pfzio: added queue for output block.
  5106c98 pfzio: added a simple (so simple) reading tool.
  6edbe0b tools/.gitignore added pfzio tools
  146ea2d pfzio: added a couple simple style fixes.
  9056e92 pfzio: added bind().
  4824c26 pfzio: added simple logic to deliver blocks to the socket
  9632f3b pfzio: Variuos fixes to improve code style.
  121f483 pfzio: added poll() support.
  753659f pfzio: added s

--- a/buffers/Makefile
+++ b/buffers/Makefile
@@ -4,3 +4,6 @@ EXTRA_CFLAGS += -I$(obj)/../include/
 
 # zio-buf-kmalloc.o is now part of zio-core
 obj-m = zio-buf-vmalloc.o
+obj-m += zio-buf-sock.o
+
+zio-buf-sock-objs = sock-syscall.o sock-buffer.o sock-nic.o
