tools: added two perfomance reporters
Signed-off-by: Alessandro Rubini <rubini@gnudd.com>

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -10,6 +10,10 @@ hostprogs-y += zio-cat-file
 hostprogs-y += pfzio-receive
 hostprogs-y += pfzio-send
 
+hostprogs-y += zio-perf-cdev
+hostprogs-y += zio-perf-sock
+
+
 # The following is ugly, please forgive me by now
 user: $(hostprogs-y)
 
