drivers: added zio-mini
zio-mini is a very simple driver, with no attributes, that can be used
to get accustomed with how ZIO and the ZIO bus work. You can create
as many devices as you want, with as many channels as you want.
Each device has only one input cset, that returns the struct timespec
collected at raw_io() time.

The driver always returns one sample only, even if the trigger
asks for more.

Signed-off-by: Alessandro Rubini <rubini@gnudd.com>
Acked-by: Federico Vaga <federico.vaga@gmail.com>

--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -4,6 +4,7 @@ EXTRA_CFLAGS += -I$(obj)/../include
 
 obj-m = zio-zero.o
 obj-m += zio-loop.o
+obj-m += zio-mini.o
 obj-m += zio-gpio.o
 ifdef CONFIG_SPI
 obj-m += zio-ad788x.o
