[BACKPORT] triggers/Makefile: comment irq and hrt trigger for incompatibility
Signed-off-by: Federico Vaga <federico.vaga@gmail.com>
Acked-by: Alessandro Rubini <rubini@gnudd.com>

--- a/triggers/Makefile
+++ b/triggers/Makefile
@@ -4,7 +4,7 @@ EXTRA_CFLAGS += -I$(obj)/../include/
 
 # zio-trig-user.o is now part of zio-core
 obj-m = zio-trig-timer.o
-obj-m += zio-trig-irq.o
-ifdef CONFIG_HIGH_RES_TIMERS
-obj-m += zio-trig-hrt.o
-endif
+#obj-m += zio-trig-irq.o
+#ifdef CONFIG_HIGH_RES_TIMERS
+#obj-m += zio-trig-hrt.o
+#endif
