--- a/tools/Makefile
+++ b/tools/Makefile
@@ -8,6 +8,7 @@ HOSTCC ?= gcc
 hostprogs-y := zio-dump
 hostprogs-y += zio-cat-file
 hostprogs-y += test-dtc
+hostprogs-y += zio-pipestamp
 
 # The following is ugly, please forgive me by now
 user: $(hostprogs-y)
