build: add git describe info as modinfo
For traceability purposes, we include commit descriptions
as MODULE_VERSION information in drivers that are deployed
in CERN control system.

Ideally, the commit description should be added to all the
binary blobs installed, but the kernel module is critical
in this connection, as it is crucial to trace back quickly
the whereabouts of installed .ko sources.

Signed-off-by: Juan David Gonzalez Cobas <dcobas@cern.ch>

--- a/buffers/Makefile
+++ b/buffers/Makefile
@@ -1,6 +1,9 @@
 LINUX ?= /lib/modules/$(shell uname -r)/build
 
-EXTRA_CFLAGS += -I$(obj)/../include/
+GIT_VERSION = $(shell cd $(src); git describe --dirty --long --tags)
+
+EXTRA_CFLAGS += -I$(obj)/../include/ -DGIT_VERSION=\"$(GIT_VERSION)\"
+
 
 # zio-buf-kmalloc.o is now part of zio-core
 obj-m = zio-buf-vmalloc.o
