--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -1,6 +1,8 @@
 LINUX ?= /lib/modules/$(shell uname -r)/build
 
-EXTRA_CFLAGS += -I$(obj)/../include
+GIT_VERSION = $(shell cd $(src); git describe --dirty --long --tags)
+
+EXTRA_CFLAGS += -I$(obj)/../include/ -DGIT_VERSION=\"$(GIT_VERSION)\"
 
 obj-m = zio-zero.o
 obj-m += zio-loop.o
