lib: massively develop the library
Signed-off-by: Federico Vaga <federico.vaga@gmail.com>

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -5,15 +5,23 @@
 
 ZIO ?= ../
 
-CFLAGS = -Wall -ggdb -O2 -fPIC -I$(ZIO)/lib -I$(ZIO)/include $(EXTRACFLAGS)
+CFLAGS = -Wall -Werror -ggdb -O2 -fPIC -I$(ZIO)/lib
+CFLAGS += -I$(ZIO)/include $(EXTRACFLAGS)
 
 LIBSHARE = libzio.so
 LIBSTAT = libzio.a
 LOBJ := libzio-print.o
+LOBJ += libzio-sysfs.o
+LOBJ += libzio-scan.o
+LOBJ += libzio-utils.o
+LOBJ += libzio-block.o
+LOBJ += libzio-buffer.o
+LOBJ += libzio-trigger.o
 
+all: lib
 lib: $(LIBSTAT) $(LIBSHARE)
 
-%: %.c $(LIBSTAT)
+%: %.c
 	$(CC) $(CFLAGS) $*.c $(LDFLAGS) -o $@
 
 $(LIBSTAT): $(LOBJ)
