tools: add lszio
Signed-off-by: Federico Vaga <federico.vaga@gmail.com>

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -1,15 +1,21 @@
 
 # build user-space tools for zio
 
-CFLAGS = -I$(M)/include/ -Wall $(ZIO_VERSION) $(EXTRACFLAGS)
+CFLAGS = -I$(M)/include/ -I$(ZIO)/lib -Wall $(ZIO_VERSION) $(EXTRACFLAGS)
 CFLAGS += -DGIT_VERSION=\"$(GIT_VERSION)\"
+CFLAGS = -I$(ZIO)/include/ -I$(ZIO)/lib
+CFLAGS += -Wall -Werror $(ZIO_VERSION) $(EXTRACFLAGS)
+LDLIBS += -Wl,-Bstatic -L$(ZIO)/lib -lzio
+LDLIBS += -Wl,-Bdynamic
 
 CC ?= $(CROSS_COMPILE)gcc
 
 progs := zio-dump
 progs += zio-cat-file
 progs += test-dtc
+progs += lszio
 
+all : user
 # The following is ugly, please forgive me by now
 user: $(progs)
 
@@ -17,7 +23,4 @@ clean:
 	rm -f $(progs) *~ *.o
 
 %: %.c
-	$(CC) $(CFLAGS) $^ -o $@
-
-zio-dump: zio-dump.c
-	$(CC) $(CFLAGS) $^ -o $@ -static -L$(ZIO)/lib -lzio
+	$(CC) $(CFLAGS) $^ -o $@ $(LDLIBS)
