lib: use ranlib in Makefile
Signed-off-by: federico.vaga@cern.ch <federico.vaga@cern.ch>

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -26,6 +26,7 @@ lib: $(LIBSTAT) $(LIBSHARE)
 
 $(LIBSTAT): $(LOBJ)
 	ar r $@ $^
+	ranlib $@
 
 $(LIBSHARE): $(LIBSTAT)
 		$(CC) -shared  -o $@ -Wl,--whole-archive,-soname,$@ $^ -Wl,--no-whole-archive
