--- a/drivers/zio/Makefile
+++ b/drivers/zio/Makefile
@@ -1,6 +1,6 @@
 # include parent_common.mk for buildsystem's defines
 # It allows you to inherit an environment configuration from larger project
-REPO_PARENT ?= ..
+REPO_PARENT ?= ../../../
 -include $(REPO_PARENT)/parent_common.mk
 
 LINUX ?= /lib/modules/$(shell uname -r)/build
@@ -15,21 +15,7 @@ ZIO_VERSION += -D__ZIO_PATCH_VERSION=$(shell echo $(GIT_VERSION) | cut -d '-' -f
 export GIT_VERSION
 export ZIO_VERSION
 
-all: modules tools
+all: modules
 
-modules:
-	$(MAKE) -C drivers/zio M=$(shell /bin/pwd)
-
-
-.PHONY: tools
-
-tools:
-	$(MAKE) -C tools M=$(shell /bin/pwd)
-
-# this make clean is ugly, I'm aware...
-clean:
-	rm -rf `find . -name \*.o -o -name \*.ko -o -name \*~ `
-	rm -rf `find . -name Module.\* -o -name \*.mod.c`
-	rm -rf `find . -name \*.ko.cmd -o -name \*.o.cmd`
-	rm -rf .tmp_versions modules.order
-	$(MAKE) -C tools clean
+modules coccicheck modules_install:
+	$(MAKE) -C $(LINUX) M=$(shell /bin/pwd) $@
