allow to just choose kernel version without path
Signed-off-by: federico.vaga@cern.ch <federico.vaga@cern.ch>

--- a/drivers/zio/Makefile
+++ b/drivers/zio/Makefile
@@ -3,7 +3,8 @@
 REPO_PARENT ?= ../../../
 -include $(REPO_PARENT)/parent_common.mk
 
-LINUX ?= /lib/modules/$(shell uname -r)/build
+KVERSION ?= $(shell uname -r)
+LINUX ?= /lib/modules/$(KVERSION)/build
 
 GIT_VERSION := $(shell git describe --dirty --long --tags)
 
