--- a/distribution/dkms.conf
+++ b/distribution/dkms.conf
@@ -5,3 +5,4 @@ MAKE[0]="make KVERSION=$kernelver all"
 BUILT_MODULE_NAME[0]="@PKGNAME@"
 DEST_MODULE_LOCATION[0]="/updates"
 AUTOINSTALL="yes"
+POST_BUILD="module-symvers-save $dkms_tree"
