--- a/distribution/dkms.conf
+++ b/distribution/dkms.conf
@@ -2,7 +2,21 @@ PACKAGE_NAME="@PKGNAME@"
 PACKAGE_VERSION="@PKGVER@"
 CLEAN="make clean"
 MAKE[0]="make KVERSION=$kernelver all"
+BUILT_MODULE_LOCATION[0]=""
 BUILT_MODULE_NAME[0]="@PKGNAME@"
-DEST_MODULE_LOCATION[0]="/updates"
+DEST_MODULE_LOCATION[0]="/extra"
+
+BUILT_MODULE_LOCATION[1]="buffers"
+BUILT_MODULE_NAME[1]="@PKGNAME@-buf-vmalloc"
+DEST_MODULE_LOCATION[1]="/extra"
+
+BUILT_MODULE_LOCATION[2]="triggers"
+BUILT_MODULE_NAME[2]="@PKGNAME@-trig-timer"
+DEST_MODULE_LOCATION[2]="/extra"
+
+BUILT_MODULE_LOCATION[3]="triggers"
+BUILT_MODULE_NAME[3]="@PKGNAME@-trig-hrt"
+DEST_MODULE_LOCATION[3]="/extra"
+
 AUTOINSTALL="yes"
 POST_BUILD="module-symvers-save $dkms_tree"
